# Cartograph

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  task.md
.agents/valtor/: MODES.md  README.md  ROADMAP.md  SCHEMA.md  registry.json  valtor.config.json
.agents/valtor/index/: decisions.jsonl  gate_results.jsonl  items.jsonl  plans.jsonl  status_transitions.jsonl
.claude/agents/: valtor-data.md  valtor-debugger.md  valtor-designer.md  valtor-dev.md  valtor-devops.md  valtor-pm.md  valtor-qa.md  valtor-reviewer.md  valtor-security.md
.claude/skills/cartograph-bootstrap/: SKILL.md
.claude/skills/start/: SKILL.md
.claude/skills/valtor/: SKILL.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CLIENT_SETUP.md  PROJECT_PACKET.md  STATUS_MODEL.md
docs/plans/: 001-cartograph-mvp.md  002-onboarding.md
examples/: whisper-mcp.declarations.json  whisper-mcp.graph.json
scripts/: smoke.ps1
skills/cartograph-bootstrap/: SKILL.md
skills/cartograph-bootstrap/agents/: openai.yaml
skills/start/: SKILL.md
skills/start/agents/: openai.yaml
src/cartograph/: __init__.py  analysis.py  cli.py  extract.py  layout.py  mcp_server.py  model.py  onboarding.py  store.py  web.py
tests/: test_analysis.py  test_extract.py  test_mcp.py  test_onboarding.py  test_store.py  test_web.py
viewer/: app.js  index.html  styles.css
